# ml-lab2-cnn-interpretability

./: .gitignore  README.md  main.py  pyproject.toml
src/: cam_utils.py  image_utils.py  model_utils.py  notebook_display.py  pipeline_utils.py  prediction_utils.py
